// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders published correctly 1`] = `
<View
  style={
    Object {
      "flex": 0,
      "height": 32,
      "width": 32,
    }
  }
>
  <Image
    source={1}
    style={
      Object {
        "position": "absolute",
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderRadius": 8,
        "height": 16,
        "justifyContent": "center",
        "left": 12,
        "position": "absolute",
        "top": 12,
        "width": 16,
      }
    }
  >
    <Image
      source={1}
      style={
        Object {
          "height": 12,
          "tintColor": "green",
          "width": 12,
        }
      }
    />
  </View>
</View>
`;

exports[`renders unpublished correctly 1`] = `
<View
  style={
    Object {
      "flex": 0,
      "height": 32,
      "width": 32,
    }
  }
>
  <Image
    source={1}
    style={
      Object {
        "position": "absolute",
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderRadius": 8,
        "height": 16,
        "justifyContent": "center",
        "left": 12,
        "position": "absolute",
        "top": 12,
        "width": 16,
      }
    }
  >
    <Image
      source={1}
      style={
        Object {
          "height": 12,
          "tintColor": "grey",
          "width": 12,
        }
      }
    />
  </View>
</View>
`;
